# spotify

./: .env.example  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  credentials.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api-coverage.md  architecture.md  clients.md  development.md  oauth.md  recovery.md  security.md  testing.md  tool-reference.md  user-guide.md
docs/adr/: 0001-additive-mix.md  0002-local-track-guard.md  0003-typed-repository-envelopes.md  0004-playback-and-scope-expansion.md  0005-destructive-tool-confirm-protocol.md  0006-scope-slimming-and-in-place-shuffle.md  0007-capability-registry.md
main/: credentials.py  spotify.py  utils.py
src/spotify_mcp/api/: client.py
src/spotify_mcp/auth/: oauth.py
src/spotify_mcp/cli/: app.py
src/spotify_mcp/client/: api_client.py
src/spotify_mcp/config/: settings.py
src/spotify_mcp/exceptions/: errors.py
src/spotify_mcp/mcp/: server.py
src/spotify_mcp/models/: schemas.py
src/spotify_mcp/repository/: spotify.py
src/spotify_mcp/services/: service.py
src/spotify_mcp/tools/: capabilities.py  definitions.py
src/spotify_mcp/utils/: links.py  logging.py
tests/: test_api_client.py  test_auth.py  test_capabilities.py  test_cli.py  test_client.py  test_config.py  test_links.py  test_repository.py  test_server.py  test_services.py  test_tools.py
