[project]
name = "spotify-mcp"
version = "0.4.0"
description = "A reusable Spotify connector: MCP server and CLI over the Spotify Web API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["spotify", "mcp", "model-context-protocol", "cli", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.2",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/403CTRLer/spotify"
Issues = "https://github.com/403CTRLer/spotify/issues"
Changelog = "https://github.com/403CTRLer/spotify/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pyright>=1.1",
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
spotify-mcp = "spotify_mcp.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
